<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectUserActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:id="@+id/searchTxt"
            android:layout_weight="3"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchBtn"
            android:src="@drawable/ic_search_icon_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/friendsList"
        android:layout_below="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnSingUp"
            android:text="@string/Friends"
            android:textSize="20dp"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/friend_recycler_view">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/friendsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnSingUp"
            android:text="@string/friend_requests"
            android:textSize="20dp"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/requests_recycler_view">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backBtn"
            android:text="@string/Back"/>
    </LinearLayout>






</RelativeLayout>