...
            android:layout_marginRight="8dp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email_Address"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
...
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="30"
                app:met_primaryColor="@color/white"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
...
                android:layout_margin="8dp"
                android:text="@string/Back"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/sign_in"
                android:layout_weight="1"
                />
...
