<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/close_popup"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/x"
        android:textColor="@color/white"
        android:background="@drawable/circle_background"
        android:layout_gravity="end"
        android:gravity="center"
        android:onClick="closeWindow"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_person_outline_white_24dp"/>
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/white" />
        </LinearLayout>

    <Button
        android:id="@+id/addFriendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:layout_gravity="center"/>


</LinearLayout>